--- a/2_CSS_Background_Lists_Cont/main1.css
+++ b/2_CSS_Background_Lists_Cont/main1.css
@@ -25,3 +25,38 @@ li:nth-child(4) a span{
 li:nth-child(5) a span{
     background-position: 0 -2390px;
 }
+li a div{
+    background: url("cards.7e0a18f0.png") no-repeat;
+    display: inline-block;
+    height: 190px;
+    width: 140px;
+}
+
+li:nth-child(1) a div{
+    position: relative;
+    background-position: -430px -1595px;
+}
+li:nth-child(2) a div{
+    position: relative;
+    top: 30px;
+    left: -70px;
+    background-position: 0 -1793px;
+}
+li:nth-child(3) a div{
+    position: relative;
+    top: 60px;
+    left: -140px;
+    background-position: -290px -1395px;
+}
+li:nth-child(4) a div{
+    position: relative;
+    top: 90px;
+    left: -210px;
+    background-position: -145px -2190px;
+}
+li:nth-child(5) a div{
+    position: relative;
+    top: 120px;
+    left: -280px;
+    background-position: 0 -2390px;
+}
